web/landing/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-landing-deployment
  labels:
    app: web-landing
spec:
  selector:
    matchLabels:
      app: web-landing
  template:
    metadata:
      labels:
        app: web-landing
    spec:
      containers:
      - name: web-landing
        image: web-landing
        ports:
        - containerPort: 80
