web/landing/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-landing-service
spec:
  selector:
    app: web-landing
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
