web/landing/k8s/landing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-landing-deployment
  labels:
    app: web-landing
spec:
  selector:
    matchLabels:
      app: web-landing
  template:
    metadata:
      labels:
        app: web-landing
    spec:
      containers:
        - name: web-landing
          image: web-landing
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web-landing-service
spec:
  selector:
    app: web-landing
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-landing-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: web-landing-service
                port:
                  number: 80
